--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
   <h1>Page not found</h1>
 
   <p>
-    The page you are looking for is either missing or gone.
+    The page you are looking for does (no longer) exists.
   </p>
 
 </article>
